--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.7.4",
     "gsap": "^3.13.0",
     "next": "15.3.1",
+    "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-scrollbar": "^4.0.2"
