--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "framer-motion": "^12.7.4",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
