--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-use-lanyard": "^0.3.4",
     "speedcast-api": "^1.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
